# SimKGC

./: .gitignore  Makefile  README.md  config.py  dict_hub.py  doc.py  eval_wiki5m_trans.py  evaluate.py  kgedges_tsv_to_relations_json.py  kgedges_tsv_to_train_val_test_json.py  kgnodes_tsv_to_entities_json.py  logger_config.py  main.py  model_huggingface.py  models.py  predict.py  pyproject.toml  rerank.py  trainer.py  triplet.py  utils.py
scripts/: init_google_colab.sh  predict_kghub.sh  preprocess_kghub.sh  train_kghub.sh
