[tool.poetry]
name = "simkgc"
version = "0.1.0"
description = ""
authors = ["Shawn T. O'Neil <shawn@tislab.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
torch = "^2.1.2"
transformers = "^4.36.2"
tqdm = "^4.66.4"
huggingface-hub = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
